--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zc-picker",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "一款模拟安卓选择的picker选择器，适配移动端和pc端",
   "main": "dist/zc-picker.ssr.js",
   "browser": "dist/zc-picker.esm.js",
@@ -8,7 +8,8 @@
   "unpkg": "dist/zc-picker.min.js",
   "files": [
     "dist/*",
-    "src/**/*.vue"
+    "src/*",
+    ".imgs/*"
   ],
   "sideEffects": false,
   "scripts": {
@@ -19,7 +20,10 @@
     "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es",
     "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@better-scroll/core": "^2.5.0",
+    "@better-scroll/wheel": "^2.5.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
@@ -41,13 +45,19 @@
     "@better-scroll/core": "^2.5.0",
     "@better-scroll/wheel": "^2.5.0"
   },
-  "peerDependencies": {
-    "vue": "^2.6.14",
-    "@better-scroll/core": "^2.5.0",
-    "@better-scroll/wheel": "^2.5.0"
-  },
+  "peerDependencies": {},
   "engines": {
     "node": ">=12"
   }
 }
+
+
+
+
+
+
+
+
+
+
 
