--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zc-picker",
-  "version": "1.0.4",
+  "version": "1.0.1",
   "description": "一款模拟安卓选择的picker选择器，适配移动端和pc端",
   "main": "dist/zc-picker.ssr.js",
   "browser": "dist/zc-picker.esm.js",
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/sweetwisdom/zc-picker"
   },
-  "homepage": " https://sweetwisdom.github.io/zc-picker/",
+  "homepage": "https://github.com/sweetwisdom/zc-picker",
   "keywords": [
     "picker",
     "vue",
@@ -20,8 +20,7 @@
     "sweetwisdom"
   ],
   "files": [
-    "dist/*",
-    "src/*"
+    "dist/*"
   ],
   "sideEffects": false,
   "scripts": {
@@ -32,10 +31,7 @@
     "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es",
     "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife"
   },
-  "dependencies": {
-    "@better-scroll/core": "~2.5.0",
-    "@better-scroll/wheel": "~2.5.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
@@ -62,6 +58,16 @@
     "node": ">=12"
   }
 }
+
+
+
+
+
+
+
+
+
+
 
 
 
