--- a/package.json
+++ b/package.json
@@ -26,15 +26,22 @@
   "scripts": {
     "serve": "vue-cli-service serve dev/serve.js",
     "prebuild": "rimraf ./dist",
-    "build": "cross-env NODE_ENV=production rollup --config build/rollup.config.js",
+    "build": " cross-env NODE_ENV=production rollup --config build/rollup.config.js  && node src/help.js",
     "build:ssr": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format cjs",
     "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es",
     "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife"
   },
+  "vetur": {
+    "tags": "config outDir/tags.json",
+    "attributes": "config outDir/attributes.json"
+  },
+  "web-types": "config outDir/web-types.json",
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
+    "@better-scroll/core": "^2.5.0",
+    "@better-scroll/wheel": "^2.5.0",
     "@rollup/plugin-alias": "^3.1.2",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^14.0.0",
@@ -42,6 +49,7 @@
     "@rollup/plugin-replace": "^2.4.2",
     "@vue/cli-plugin-babel": "^4.5.13",
     "@vue/cli-service": "^4.5.13",
+    "components-helper": "2.1.0",
     "cross-env": "^7.0.3",
     "minimist": "^1.2.5",
     "rimraf": "^3.0.2",
@@ -49,24 +57,13 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^5.1.9",
     "vue": "^2.6.14",
-    "vue-template-compiler": "^2.6.14",
-    "@better-scroll/core": "^2.5.0",
-    "@better-scroll/wheel": "^2.5.0"
+    "vue-template-compiler": "^2.6.14"
   },
   "peerDependencies": {},
   "engines": {
     "node": ">=12"
   }
 }
-
-
-
-
-
-
-
-
-
 
 
 
