--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "a-picker",
-  "version": "1.0.7",
+  "name": "vue-andriod-picker",
+  "version": "1.0.2",
   "description": "一款模拟安卓选择的picker选择器，适配移动端和pc端",
   "main": "dist/a-picker.ssr.js",
   "browser": "dist/a-picker.esm.js",
@@ -59,27 +59,3 @@
     "node": ">=12"
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
